# jota-roble

./: .env  .gitignore  Cargo.toml  Makefile
db/: schema.sql
db/migrations/: 202203310435_users.down.sql  202203310435_users.up.sql  202206240000_shows.down.sql  202206240000_shows.up.sql
migrations/: 202203310435_users.up.sql
scripts/: gen-full-schema.sh
src/: api_error.rs  data.rs  errors.rs  main.rs  routes.rs
src/api/v1/: auth.rs  mod.rs
src/api/v1/auth/: controller.rs  login.rs  mod.rs
src/api/v1/show/: api.rs  controller.rs
src/db/: mod.rs
