[package]
name = "jota_roble"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-identity = "0.4"

sqlx = { version = "0.5.11", default-features = false, features = ["sqlite", "runtime-actix-native-tls", "migrate", "chrono", "macros"] }
dotenv = "0.15"
env_logger = "0.9"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono =  { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
validator = { version = "0.14", features = ["derive"]}
derive_more = "0.99"